Small adjustments for backport